--- a/client/src/components/organim/banner/banner.scss
+++ b/client/src/components/organim/banner/banner.scss
@@ -23,10 +23,11 @@
     }
 
     &__content{
+        z-index: 3;
         margin: 20px;
         width: 100%;
+        text-align: center;
         max-width: 720px;
-        z-index: 3;
     }
 
     &__title{
