--- a/client/src/styles/components.scss
+++ b/client/src/styles/components.scss
@@ -1,4 +1,4 @@
-
+@import '../components/atomic/inputField/inputField.scss';
 @import '../components/atomic/container/container.scss';
 @import '../components/atomic/button/button.scss';
 @import '../components/organim/banner/banner.scss';
