--- a/client/src/components/atomic/container/container.scss
+++ b/client/src/components/atomic/container/container.scss
@@ -3,16 +3,16 @@
         width: 100%;
         height: 100%;
         overflow-x: hidden;
+        display: flex;
 
         &-static {
             overflow-y: hidden;
-            display: flex;
             align-items: center;
             justify-content: center;
         }
 
         &-scroll {
-            overflow-y: scroll;
+            overflow-y: auto;
         }
     }
 }
