--- a/client/src/components/atomic/inputField/inputField.scss
+++ b/client/src/components/atomic/inputField/inputField.scss
@@ -18,6 +18,11 @@
         font-style: italic;
         margin-bottom: 10px;
     }
+
+    &__checkbox {
+        width: auto;
+        height: auto;
+    }
 }
 
 
