--- a/client/src/components/organim/profile/profile.scss
+++ b/client/src/components/organim/profile/profile.scss
@@ -1,3 +1,14 @@
+@keyframes show_content {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+
 .profile {
     cursor: pointer;
     width: 38px;
@@ -16,6 +27,25 @@
     }
 
     &__content {
+        opacity: 1;
+        top: 45px;
+        right: 0;
+        display: grid;
+        padding: 10px 0;
+        background: $color_bg_100;
         position: absolute;
+        animation: show_content 0.5s;
+        clip-path: polygon(0 100%, 0 10%, 80% 10%, 85% 0, 90% 10%, 100% 10%, 100% 100%);
+    }
+
+    &__link {
+        padding: 10px 15px;
+        color: $color_txt_dark;
+        transition: all .3s;
+
+        &:hover {
+            background-color: $color_bg_900;
+            transition: all .3s;
+        }
     }
 }
